client/src/App.css
.App {
  text-align: center;
}

@import url('https://fonts.googleapis.com/css2?family=Satisfy&family=Shadows+Into+Light&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Indie+Flower&display=swap');
/* navbar */
.myNavbar {
  font-family: 'Courgette', cursive;
  font-size: 25px;
  font-weight: 800;
  margin-bottom: 5px;
}

.homeCover {
  margin: 15px 15px !important;
}

.jumbotron {
  height: 400px;
  background-image: url('https://images.unsplash.com/photo-1544782321-8fab42cfd62e?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');
  background-size: auto 100%;
  color: white;
  text-align: center;
  opacity: 0.9;
  font-family: 'Courgette', cursive;
}

.jumbotron p {
  margin-top: 5%;
}

.jumbotron h1 {
  margin-top: 3%;
  font-size: 50px;
}

.cocktailImg {
  border-radius: 50%;
  width: 175px;
}

.middle {
  transition: 0.5s easet;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
}

.cocktail:hover .cocktailImg {
  opacity: 0.7;
}

.cocktail:hover .middle {
  opacity: 0.8;
}

.text {
  color: white;
  font-size: 14px;
  padding: 16px 32px;
}

.cocktail {
  text-align: center;
  padding: auto;
  font-size: 50px;
  font-weight: 800;
}

.divider {
  border-top: 5px solid rgb(117, 110, 110);
  border-radius: 10px;
  margin-top: 30px;
  width: 65%;
  /* padding-top: 20px; */
  /* padding-bottom: 20px; */
}

/* Top 10, popular ...*/
.cocktailCategory {
  text-align: center;
  font-size: 40px;
  font-weight: 800;
  margin-top: 10px;
  margin-bottom: 20px;
  font-family: 'Courgette', cursive;
}

.cocktailName {
  padding-top: 10px;
  padding-bottom: 5px;
  font-size: 22px;
  font-weight: 600;
}

/* cocktailDetail */

.cocktailDetailName {
  text-align: center;
  font-size: 60px;
  font-weight: 900;
  padding-top: 20px;
  padding-bottom: 20px;
  font-family: 'Courgette', cursive;
  color: rgb(59, 59, 59);
  /* font-family: 'Courgette', cursive; */
}

.cocktailDetailImg {
  border-radius: 10%;
  width: 300px;
  height: 300px;
  margin-bottom: 20px;
}

.cocktailDetailInstruction {
  text-align: center;
  font-size: 25px;
  font-weight: 500;
  padding-bottom: 20px;
}

.detailIngredientImg {
  border-radius: 10%;
  width: 105px;
  height: 105px;
  margin-top: 20px;
  margin-bottom: 30px;
}

/* add detail ingredient image shake */
.detailIngredientImg:hover {
  animation: shake 0.7s;
}

@keyframes shake {
  0% {
    transform: translate(1px, 1px) rotate(0deg);
  }
  10% {
    transform: translate(-1px, -2px) rotate(-1deg);
  }
  20% {
    transform: translate(-3px, 0px) rotate(1deg);
  }
  30% {
    transform: translate(3px, 2px) rotate(0deg);
  }
  40% {
    transform: translate(1px, -1px) rotate(1deg);
  }
  50% {
    transform: translate(-1px, 2px) rotate(-1deg);
  }
}

.detailTitle {
  text-align: center;
  font-size: 40px;
  font-weight: 900;
  /* padding-top: 10px; */
  padding-bottom: 20px;
  color: rgb(88, 88, 88);
  font-family: 'Courgette', cursive;
}

.detailDivider {
  border-top: 4px solid rgb(117, 110, 110);
  border-radius: 3px;
  width: 65%;
}

.ingredientDescription {
  text-align: center;
  font-size: 22px;
  font-weight: 600;
  padding-bottom: 20px;
  /* padding-top: px; */
}

/* description button */

.btn-outline-info {
  font-weight: 500;
  color: black;
}

.footer {
  clear: both;
  position: relative;
  left: 0;
  bottom: 0;
  width: 100%;
  padding-top: 60px;
}

a.ingredLink {
  color: rgb(0, 55, 107);
}

a.ingredLink:hover {
  font-size: 110%;
  text-decoration: none;
}

a.cocktailNameLink {
  color: rgb(0, 0, 0);
}

a.cocktailNameLink:hover {
  color: rgb(59, 59, 59);
  text-decoration: none;
}

/* let footer stick bottom */
.Site {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

.Site-content {
  flex: 1;
}

/* Drinks page */

.categoryImg {
  border-radius: 30%;
  width: 205px;
}

.categoryDescription {
  width: 50%;
  text-align: center;
  margin-inline: auto;
  margin-bottom: 40px;
  margin: top 0%;
  /* font-family: 'Courgette', cursive; */
  font-size: 20px;
  font-weight: 500;
  color: rgb(59, 59, 59);
}

.loginForm {
  width: 30%;
  margin: 20px auto;
  font-size: 22px;
  font-weight: 600;
}

.btn-random {
  background-color: #343a40;
  border: none;
  color: white;
  padding: 20px 20px;
  text-align: center;
  text-decoration: none;
  cursor: pointer;
  font-size: 3vw;
  font-weight: 600;
  width: 25%;
  transition-duration: 0.4s;
  border: 3px solid #343a40;
  border-radius: 12px;
}

.btn-random:hover {
  background-color: white;
  color: #343a40;
  border: 3px solid #343a40;
}

.btn-form {
  background-color: #343a40;
  border: none;
  color: white;
  padding: 8px 20px;
  text-align: center;
  text-decoration: none;
  font-size: 3vw;
  margin: 20px 0;
  cursor: pointer;
  font-weight: 600;
  width: 100%;
  transition-duration: 0.3s;
  border: 3px solid #343a40;
  border-radius: 12px;
}

.btn-form:hover {
  background-color: white;
  color: #343a40;
  border: 3px solid #343a40;
}

.formText {
  color: grey;
  font-size: 16px;
  text-align: center;
}

input[type='username'] {
  padding: 20px 10px;
  margin: 20px 0;
  border: 4px solid #343a40;
  font-size: 15px;
}
input[type='password'] {
  padding: 20px 10px;
  margin: 20px 0;
  font-size: 15px;
  border: 4px solid #343a40;
}

